--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "TOKEN": "ODQxODU4ODU0MjU3MTY0MzE4.YJs4Jw.ha98Qu8qmkR2paGPmBPayFghoSQ",
+  "TOKEN": "ODgwMTg5Nzk0MTc1NTQ5NDcw.YSaqoA.Q1Wg252-s6WeHcAGSxOj5IMci7s",
   "PREFIX": "+",
   "approveemoji": "769665713124016128",
   "denyemoji": "770326304473350145",
